--- a/https/nginx/proxy-v2ray.conf
+++ b/https/nginx/proxy-v2ray.conf
@@ -1,5 +1,5 @@
 # $http_x_forwarded_for means the ip from ALB forwarding
-#limit_req_zone $http_x_forwarded_for zone=limit_zone:16m rate=50r/s;
+# limit_req_zone $http_x_forwarded_for zone=limit_zone:16m rate=50r/s;
 
 # $binary_remote_addr for local test
 # limit_req_zone $binary_remote_addr zone=limit_zone:16m rate=50r/s;
@@ -12,6 +12,9 @@ server_tokens off;
 # gzip_types text/plain text/javascript application/json application/javascript application/x-javascript text/css application/xml application/x-www-form-urlencoded;
 # proxy_cache_bypass 1;
 # proxy_no_cache 1;
+
+access_log off;
+error_log /dev/null;
 
 server {
     # listen 80;
@@ -27,13 +30,15 @@ server {
 
     location /rr {
         proxy_redirect off;
-        proxy_pass http://v2ray_docker:10101;
         proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $http_host;
+        if ($http_upgrade = "websocket"){
+            proxy_pass http://v2ray_docker:10101;
+        }
     }
 
     error_page  404              /404.html;
