--- a/https/v2ray/config.json
+++ b/https/v2ray/config.json
@@ -2,7 +2,7 @@
     "log": {
         "access": "/var/log/v2ray/access.log",
         "error": "/var/log/v2ray/error.log",
-        "loglevel": "warning"
+        "loglevel": "none"
     },
     "inbound": {
         "port": 10101,
