--- a/https/v2ray/config.json
+++ b/https/v2ray/config.json
@@ -25,9 +25,15 @@
             }
         }
     },
+    "dns": {
+       "servers": [
+           "https+local://1.1.1.1/dns-query",
+           "localhost"
+       ]
+    },
     "outbound": {
         "protocol": "freedom",
-        "settings": {}
+        "settings": {"domainStrategy": "UseIP"}
     },
     "outboundDetour": [
         {
