--- a/https/nginx/proxy-v2ray.conf
+++ b/https/nginx/proxy-v2ray.conf
@@ -23,9 +23,13 @@ server {
     ssl_certificate       /etc/nginx/certs/1122tk.crt;
     ssl_certificate_key   /etc/nginx/certs/1122tk.key;
 
+    include error_cat.conf;
+
     location / {
-       root /usr/share/nginx/html;
-       index index.html index.htm;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        sub_filter_once off;
+        sub_filter "</h1>" '</h1><img src="https://http.cat/$status">';
     }
 
     location /rr {
@@ -41,14 +45,14 @@ server {
         }
     }
 
-    error_page  404              /404.html;
+    # error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    # error_page   500 502 503 504  /50x.html;
+    # location = /50x.html {
+    #     root   /usr/share/nginx/html;
+    # }
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
