--- a/https/nginx/proxy-v2ray.conf
+++ b/https/nginx/proxy-v2ray.conf
@@ -22,8 +22,9 @@ server {
     ssl on;
     ssl_certificate       /etc/nginx/certs/1122tk.crt;
     ssl_certificate_key   /etc/nginx/certs/1122tk.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-    include error_cat.conf;
+    include conf.d/error/error_cat.conf;
 
     location / {
         root /usr/share/nginx/html;
